--- a/src/Samarootan.Api/Samarootan.Api.csproj
+++ b/src/Samarootan.Api/Samarootan.Api.csproj
@@ -1,19 +1,49 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+
     <TargetFramework>net8.0</TargetFramework>
+
     <Nullable>disable</Nullable>
+
     <ImplicitUsings>enable</ImplicitUsings>
+
     <RootNamespace>Samarootan.Api</RootNamespace>
+
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+
+    <NoWarn>$(NoWarn);SA1649</NoWarn>
+
+    <NoWarn>$(NoWarn);SA1516</NoWarn>
+
   </PropertyGroup>
 
   <ItemGroup>
+
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7" />
+
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+
+      <PrivateAssets>all</PrivateAssets>
+
+    </PackageReference>
+
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+
+    <AdditionalFiles Include="./stylecop.json" />
+    
   </ItemGroup>
 
 </Project>
