--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,24 +16,29 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    # Install Docker
+    - name: Set up Docker
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker.io
 
-    - name: Cache Docker layers
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+    # Install Docker Compose
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version  # Verify installation
 
+    # Build and run the Docker Compose setup
     - name: Build and run Docker Compose
       run: |
         docker-compose -f ./src/Samarootan.Api/docker-compose.yml up --build -d
 
+    # Run tests inside the container (replace <container_name> with the correct one)
     - name: Run tests
       run: |
-        docker exec -t dotnet-web-api dotnet test --no-restore --verbosity normal
+        docker exec -t <container_name> dotnet test --no-restore --verbosity normal
 
+    # Stop and remove containers after the tests
     - name: Stop and remove containers
       run: docker-compose -f ./src/Samarootan.Api/docker-compose.yml down
