--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,32 +13,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Checkout the code from the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Install Docker
+    # Step 2: Set up Docker
     - name: Set up Docker
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker.io
+      uses: docker/setup-buildx-action@v2
 
-    # Install Docker Compose
+    # Step 3: Install Docker Compose
     - name: Install Docker Compose
       run: |
         sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
-        docker-compose --version  # Verify installation
+        docker-compose --version  # Verify Docker Compose installation
 
-    # Build and run the Docker Compose setup
+    # Step 4: Build and run Docker Compose
     - name: Build and run Docker Compose
       run: |
         docker-compose -f ./src/Samarootan.Api/docker-compose.yml up --build -d
 
-    # Run tests inside the container (replace <container_name> with the correct one)
+    # Step 5: Run tests inside the container (replace <container_name> with the correct container name)
     - name: Run tests
       run: |
         docker exec -t <container_name> dotnet test --no-restore --verbosity normal
 
-    # Stop and remove containers after the tests
+    # Step 6: Stop and remove containers after tests are complete
     - name: Stop and remove containers
       run: docker-compose -f ./src/Samarootan.Api/docker-compose.yml down
