--- a/src/Samarootan.Api/docker-compose.yml
+++ b/src/Samarootan.Api/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   api:
-    container_name: dotnet-web-api
+    container_name: api
     build:
       context: .
       dockerfile: Dockerfile 
