--- a/src/Samarootan.Api/Dockerfile
+++ b/src/Samarootan.Api/Dockerfile
@@ -3,6 +3,11 @@ WORKDIR /app
 
 COPY . ./
 RUN dotnet restore
+
+RUN dotnet build --configuration Release --no-restore
+
+RUN dotnet test --no-restore --verbosity normal
+
 RUN dotnet publish -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0@sha256:6c4df091e4e531bb93bdbfe7e7f0998e7ced344f54426b7e874116a3dc3233ff
