--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,3 +36,11 @@ jobs:
     # Step 5: Clean up
     - name: Stop and remove containers after tests
       run: docker-compose -f ./src/Samarootan.Api/docker-compose.yml down
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Build and push Docker images with Docker Compose
+      run: |
+        docker-compose -f ./src/Samarootan.Api/docker-compose.yml build
+        docker-compose -f ./src/Samarootan.Api/docker-compose.yml push
