--- a/src/Samarootan.Api/docker-compose.yml
+++ b/src/Samarootan.Api/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   api:
     container_name: api
+    image: cihataydin/api:latest
     build:
       context: .
       dockerfile: Dockerfile 
