--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,3 +44,9 @@ jobs:
       run: |
         docker-compose -f ./src/Samarootan.Api/docker-compose.yml build
         docker-compose -f ./src/Samarootan.Api/docker-compose.yml push
+    
+    # Step 6: Trigger deployment to Render
+    - name: Trigger Render Deployment
+      if: success()
+      run: |
+        curl -X POST ${{ secrets.DEPLOY_HOOK }}
