chore(11): updates readme dcoker command
- adds docker env file
- adits app settings files

--- a/src/Samarootan.Api/appsettings.Development.json
+++ b/src/Samarootan.Api/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   }
