--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,7 +38,7 @@ jobs:
     # Step 4: Build and run the Docker Compose setup
     - name: Build and run Docker Compose
       run: |
-        docker-compose --env-file ${{ ENV_PATH }} -f ./src/Samarootan.Api/docker-compose.yml up --build -d
+        docker-compose --env-file ${{ env.ENV_PATH }} -f ./src/Samarootan.Api/docker-compose.yml up --build -d
 
     # Step 5: Clean up
     - name: Stop and remove containers after tests
