--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,14 +21,6 @@ jobs:
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
-    # Step 3: Load environment variables from env.docker file
-    - name: Load environment variables from env.docker
-      run: |
-        set -a
-        source src/Samarootan.Api/.env.docker
-        set +a
-      shell: bash
-
     # Step 3: Install Docker Compose
     - name: Install Docker Compose
       run: |
@@ -39,7 +31,7 @@ jobs:
     # Step 4: Build and run the Docker Compose setup
     - name: Build and run Docker Compose
       run: |
-        docker-compose --env-file ${{ env.ENV_PATH }} -f ./src/Samarootan.Api/docker-compose.yml up --build -d
+        docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml up --build -d
 
     # Step 5: Clean up
     - name: Stop and remove containers after tests
