feat(15): implements dockerized grafana for log tracing
- adds json log support.
- implements prometheus metrics endpoint.

--- a/src/Samarootan.Api/docker-compose.yml
+++ b/src/Samarootan.Api/docker-compose.yml
@@ -11,4 +11,16 @@ services:
       - "8080:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=${ENVIRONMENT:?Error}
+    networks:
+      - prometheus-net
+    volumes:
+      - shared-logs:/app/logs
     restart: always
+
+networks:
+  prometheus-net:
+    external: true
+
+volumes:
+  shared-logs:
+    external: true
