--- a/src/Samarootan.Api/Samarootan.Api.csproj
+++ b/src/Samarootan.Api/Samarootan.Api.csproj
@@ -26,6 +26,8 @@
 
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 
+    <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
+
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
 
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
