--- a/src/Samarootan.Api/appsettings.Development.json
+++ b/src/Samarootan.Api/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "UseJsonFormat": false
 }
