--- a/src/Samarootan.Api/appsettings.Production.json
+++ b/src/Samarootan.Api/appsettings.Production.json
@@ -6,5 +6,6 @@
             "Microsoft.Hosting.Lifetime": "Warning",
             "Microsoft.AspNetCore": "Error"
         }
-    }
+    },
+    "UseJsonFormat": true
 }
