--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,9 +43,9 @@ jobs:
 
     # Step 7: Build and push Docker images with Docker Compose
     - name: Build and push Docker images with Docker Compose
-      run: |
-        docker network create prometheus-net
-        docker volume create shared-logs
+      run: | 
+        docker network inspect prometheus-net >/dev/null 2>&1 || docker network create prometheus-net
+        docker volume inspect shared-logs >/dev/null 2>&1 || docker volume create shared-logs
         docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml build
         docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml push
     
