--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,12 +40,16 @@ jobs:
     # Step 6: Log in to Docker Hub
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    
+    # Step 6.1: Create network and volume (with error checks)
+    - name: Create Docker network and volume
+      run: |
+        docker network inspect prometheus-net >/dev/null 2>&1 || docker network create prometheus-net
+        docker volume inspect shared-logs >/dev/null 2>&1 || docker volume create shared-logs
 
     # Step 7: Build and push Docker images with Docker Compose
     - name: Build and push Docker images with Docker Compose
       run: | 
-        docker network inspect prometheus-net >/dev/null 2>&1 || docker network create prometheus-net
-        docker volume inspect shared-logs >/dev/null 2>&1 || docker volume create shared-logs
         docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml build
         docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml push
     
