--- a/src/Samarootan.Api/Samarootan.Api.csproj
+++ b/src/Samarootan.Api/Samarootan.Api.csproj
@@ -21,6 +21,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+  
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+
+    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
 
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7" />
 
