refactor(19): considers microservice architecture and applies to folder structure
- removes samarootan prefix from folders
- renames solution and project file

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,11 +37,11 @@ jobs:
     # Step 4: Build and run the Docker Compose setup
     - name: Build and run Docker Compose
       run: |
-        docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml up --build -d
+        docker-compose --env-file src/Microservice/.env.docker -f ./src/Microservice/docker-compose.yml up --build -d
 
     # Step 5: Clean up
     - name: Stop and remove containers after tests
-      run: docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml down
+      run: docker-compose --env-file src/Microservice/.env.docker -f ./src/Microservice/docker-compose.yml down
 
     # Step 6: Log in to Docker Hub
     - name: Log in to Docker Hub
@@ -50,8 +50,8 @@ jobs:
     # Step 7: Build and push Docker images with Docker Compose
     - name: Build and push Docker images with Docker Compose
       run: | 
-        docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml build
-        docker-compose --env-file src/Samarootan.Api/.env.docker -f ./src/Samarootan.Api/docker-compose.yml push
+        docker-compose --env-file src/Microservice/.env.docker -f ./src/Microservice/docker-compose.yml build
+        docker-compose --env-file src/Microservice/.env.docker -f ./src/Microservice/docker-compose.yml push
     
     # Step 8: Trigger Render Deployment
     - name: Trigger Render Deployment
