--- a/src/Microservice/Microservice.csproj
+++ b/src/Microservice/Microservice.csproj
@@ -8,7 +8,7 @@
 
     <ImplicitUsings>enable</ImplicitUsings>
 
-    <RootNamespace>Samarootan.Api</RootNamespace>
+    <RootNamespace>Microservice</RootNamespace>
 
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 
