--- a/src/Microservice/Dockerfile
+++ b/src/Microservice/Dockerfile
@@ -10,4 +10,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0@sha256:6c4df091e4e531bb93bdbfe7e7f0998e7ced344f54426b7e874116a3dc3233ff
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "Samarootan.Api.dll", "--urls", "http://+:80"]
+ENTRYPOINT ["dotnet", "Microservice.dll", "--urls", "http://+:80"]
