--- a/src/Microservice/Microservice.csproj
+++ b/src/Microservice/Microservice.csproj
@@ -32,6 +32,8 @@
 
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
 
+    <PackageReference Include="Scalar.AspNetCore" Version="2.1.17" />
+
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
 
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
