--- a/dockerfiles/monitoring/prometheus.yml
+++ b/dockerfiles/monitoring/prometheus.yml
@@ -12,4 +12,4 @@ scrape_configs:
   
   - job_name: 'docnet_service'
     static_configs:
-      - targets: ['api:80']
+      - targets: ['api:80', 'host.docker.internal:8000']
