feat: restructure project to use new Api structure and update Docker configurations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: api
     image: ${HUB_IMAGE:?Error}
     build:
-      context: .
-      dockerfile: Dockerfile 
+      context: ./src/
+      dockerfile: ./Api/Dockerfile 
     ports:
       - "8080:80"
     environment:
