--- a/src/Infra/Infra.csproj
+++ b/src/Infra/Infra.csproj
@@ -7,11 +7,20 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../Domain/Domain.csproj" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    
+    <PackageReference Include="Serilog" Version="4.2.0" />
+
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4" />
   </ItemGroup>
 </Project>
