fix(35): considers copilot review

--- a/dockerfiles/postgres-cluster/primary/postgres.conf
+++ b/dockerfiles/postgres-cluster/primary/postgres.conf
@@ -3,3 +3,5 @@ wal_level = replica
 max_wal_senders = 10
 wal_keep_size = 512
 hot_standby = on
+synchronous_commit = remote_apply
+synchronous_standby_names = 'FIRST 2 (pg-replica-1, pg-replica-2)'
