feat(39): implements sample management API with CRUD operations and EF Core migrations

--- a/src/Api/Microservice.csproj
+++ b/src/Api/Microservice.csproj
@@ -18,6 +18,8 @@
 
     <NoWarn>$(NoWarn);SA1516</NoWarn>
 
+    <UserSecretsId>App-Development-Secrets</UserSecretsId>
+
   </PropertyGroup>
 
   <ItemGroup>
