--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -7,5 +7,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UseJsonFormat": false
+  "UseJsonFormat": false,
+  "ConnectionStrings": {
+    "PgpoolDb": ""
+  }
 }
