feat(46): implements caching with Redis and in-memory cache by adding cache manager

--- a/src/Api/Microservice.csproj
+++ b/src/Api/Microservice.csproj
@@ -24,6 +24,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.5" />
+
     <ProjectReference Include="../Domain/Domain.csproj" />
     
     <ProjectReference Include="../Infra/Infra.csproj" />
