--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -9,6 +9,11 @@
   },
   "UseJsonFormat": false,
   "ConnectionStrings": {
-    "PgpoolDb": ""
+    "PgpoolDb": "",
+    "Redis": ""
+  },
+  "CacheOptions": {
+    "MemoryCacheDuration": "00:02:00",
+    "DistributedCacheDuration": "00:10:00"
   }
 }
