feat(46): adds UseDistributedCache option to CacheManager and update appsettings

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -13,6 +13,7 @@
     "Redis": ""
   },
   "CacheOptions": {
+    "UseDistributedCache": false,
     "MemoryCacheDuration": "00:02:00",
     "DistributedCacheDuration": "00:10:00"
   }
